--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/calendar.js"></script>
 </head>
 
 <body>
     <h1>Programming Exercise UI Devs</h1>
+    <div class="panel">
+        <div class="inputgroup">
+            <label for="startdate">Start Date</label>
+            <input type="date" name="startdate" id="startdate">
+        </div>
 
+        <div class="inputgroup">
+            <label for="numdays">Number of days</label>
+            <input type="number" name="numdays" id="numdays" min="1">
+        </div>
+
+        <div class="inputgroup">
+            <label for="countrycode">Country Code</label>
+            <input type="text" name="countrycode" id="countrycode">
+        </div>
+        <button type="submit" onclick="return showWeeks()">Submit</button>
+    </div>
+    <div id="content"></div>
 </body>
 
 </html>
